# quarto

./: .gitignore  PRECOMPUTE_PLAN.md  README.md  Reflection-Project.pptx  ai_stats.txt  build.bat  build.gradle  log.txt  projectDesc.md
.claude/: settings.local.json
Diagrams/: class_diagram.md  class_overview.txt  sequence_diagram.md
Diagrams/Class Diagram/: class_diagram.md
Diagrams/Sequence Diagram/: sequence_diagram.md
docs/: ChokerJokerStrategy_Explanation.md  ChokerJokerStrategy_Improvements.md  protocol-commands.md
docs/Diagrams/: class_overview.txt
docs/javadoc/: allclasses-index.html  element-list  index-all.html  overview-summary.html  overview-tree.html  search.html  type-search-index.js
quarto-cpp/: CMakeLists.txt  Makefile  README.md  build_release.sh
quarto-cpp/build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  quarto-ai
quarto-cpp/src/: choker_joker.cpp  choker_joker.hpp  client.cpp  client.hpp  game.hpp  main.cpp  network.cpp  network.hpp  search.cpp  search.hpp  time_manager.hpp  tt.hpp
quarto-java/: .gitignore  ChokerJokerStrategy.java  ai_stats.txt  settings.gradle
simulations/: CMakeLists.txt
simulations/src/: main.cpp
simulations/src/engine/: Bitboard.cpp  Bitboard.h  Symmetry.cpp  Symmetry.h  TranspositionTable.cpp  TranspositionTable.h
simulations/src/sim/: GameRunner.cpp  GameRunner.h
simulations/src/strategies/: Agent.h  ChokerJoker.cpp  ChokerJoker.h  GreedyAgent.cpp  GreedyAgent.h  MinimaxAgent.cpp  MinimaxAgent.h  RandomAgent.cpp  RandomAgent.h
src/Client/: AIGameClient.java  (+13 more)
(+111 files in other folders)
